# sentinel-cli

./: .dockerignore  .env.example  .gitignore  COMMAND_CENTER.md  COMMERCIAL-LICENSE.md  Dockerfile  LICENSE.md  README.md  diagnose-inner-cli.sh  docker-compose.dashboard.yml  docker-compose.yml  init.sh  pyproject.toml  run-with-env.sh
config/: .env.example  config.yaml
dashboard/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: API.md  CONFIGURATION.md  DEVELOPMENT.md  PRD-dashboard-service.md  Sentinel-Overzicht.md  TROUBLESHOOTING.md  agent-learning-from-feedback-2026-05-03.md  agent-learning-from-feedback-DECISIONS.md  agent-learning-from-feedback-HANDOVER.md  agent_sdk_migration.md  deploy.md  performance-analysis-2026-04-30.md  reset-command.md  sentinel.html
prompts/: confidence_evaluator.md  developer.md  drupal_developer_perplexity.md  functional_debrief.md  plan_generator.md  project_profiler.md  security_reviewer.md
src/: agent_sdk_wrapper.py  attachment_manager.py  beads_manager.py  cli.py  command_executor.py  compose_runner.py  config_loader.py  environment_manager.py  gitlab_client.py  guardrails.py  jira_client.py  jira_factory.py  jira_server_client.py  lando_translator.py  profile_enricher.py  prompt_loader.py  session_tracker.py  stack_profiler.py  ticket_context.py  worktree_manager.py
tests/: conftest.py  test_agent_integration.py  test_agent_sdk_cancellation.py  test_agent_sdk_wrapper.py  test_attachment_manager.py  (+34 more)
(+375 files in other folders)
